--- a/creative-computing/index.html
+++ b/creative-computing/index.html
@@ -1,20 +1,21 @@
 <html>
 	<head>
-		<title>mllelong</title>
+		<title> Seowon's Homepage </title>
+		<link rel="stylesheet" type="text/css" href="homepage.css">
+		<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+
 	</head>
 
 	<body>
-		<h1>Hello!</h1>
+		<h1 id="header"> Seowon's homepage </h1>
+		<h1 id="helloagain"> Parsons School of Design </h1>
 
 		<p>Welcome to my Creative Computing Site</p>
 
-		<ol>
-			<li>Wake up</li>
-			<Li>Take a shower</Li>
-			<Li>Get dressed</Li>
-			<Li>Go outside </Li>
-		</ol>
+		<img src="ato.png" width="300px">
 
-		<a href="page1.html">Click Me</a>
+		<p></p>
+
+		<a href="text%20adventure/index.html"> Project 1: Text Adventure </a>
 	</body>
 </html>
