--- a/creative-computing/text adventure/index.html
+++ b/creative-computing/text adventure/index.html
@@ -15,5 +15,7 @@
 
 		<a href="page10.html">California</a>
 		<img src="2.jpeg">
+		<p> </p>
+		<a href="../index.html"> Go home </a>
 	</body>
 </html>
