--- a/creative-computing/index.html
+++ b/creative-computing/index.html
@@ -10,6 +10,10 @@
 		<h1 id="header"> Seowon's homepage </h1>
 		<h1 id="helloagain"> Parsons School of Design </h1>
 
+		<p> 9173319941 </p>
+
+		<h> Long Island City, NEW YORK </h>
+
 		<p>Welcome to my Creative Computing Site</p>
 
 		<p></p>
