--- a/creative-computing/index.html
+++ b/creative-computing/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1 id="header"> Seowon's homepage </h1>
 		<h1 id="helloagain"> Parsons School of Design </h1>
-
+		
 		<p> 9173319941 </p>
 
 		<h> Long Island City, NEW YORK </h>
@@ -18,6 +18,12 @@
 
 		<p></p>
 
+
 		<a href="text%20adventure/index.html"> Project 1: Text Adventure </a>
+		<p> </p>
+
+		<a href="assignment3/index.html"> Project 3: Appropriate a Webpage </a>
+
+
 	</body>
 </html>
