--- a/creative-computing/index.html
+++ b/creative-computing/index.html
@@ -23,6 +23,9 @@
 		<p> </p>
 
 		<a href="assignment3/index.html"> Project 3: Appropriate a Webpage </a>
+		<p> </p>
+
+		<a href="Threethings/index.html"> Project 4: Three Things in a Series </a>
 
 
 	</body>
