--- a/creative-computing/index.html
+++ b/creative-computing/index.html
@@ -26,6 +26,10 @@
 		<a href="Threethings/index.html"> Project 4: Three Things in a Series </a>
 		<p> </p>
 
+		<a href="javascript/gridexercise.html"> Project 6: Grid Exercise </a>
+		<p> </p>
+	
+
 
 	</body>
 </html>
