--- a/creative-computing/index.html
+++ b/creative-computing/index.html
@@ -29,6 +29,7 @@
 		<a href="javascript/gridexercise.html"> Project 6: Grid Exercise </a>
 		<p> </p>
 	
+		<a href="pianoclock/pianoclock.html"> Project 7: Piano Clock </a>
 
 
 	</body>
