--- a/creative-computing/Threethings/index.html
+++ b/creative-computing/Threethings/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<link rel="stylesheet" href="index.css" />	
+	
 	<title> Three Things in a Series </title>
 
 </head>
 
 <body>
+
 	<div id="car">
 		<div class="top"></div>
 		<div class="window"></div>
@@ -26,5 +28,7 @@
 		<div class="window6"></div>
 	<div id="wheel5"></div>
 	<div id="wheel6"></div>
+
+<script src="index.js"></script>
 </body>
 </html>
