--- a/creative-computing/index.html
+++ b/creative-computing/index.html
@@ -32,6 +32,9 @@
 		<a href="pianoclock/pianoclock.html"> Project 7: Piano Clock </a>
 		<p> </p>
 
+		<a href="final/final.html"> Final: Movie and Sound
+		<p> </p>
+
 
 	</body>
 </html>
