--- a/creative-computing/final/final.html
+++ b/creative-computing/final/final.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-<p> CLICK ON POSTERS TO PLAY OST </p>
+<p> MOVIES AND THEIR THEME SONGS 
+click on posters to play & pause </p>
 
 <audio id="amelie" src="amelie.mp3">  </audio>
 <audio id="beginAgain" src="beginagain.mp3">  </audio>
