My commit message

--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <style>
 	body {background-color: yellow;}
 </style>
+
+<head>
+	<title>seowon</title>
+</head>
+	<body>
+
+		<h1> SUPERSTITIONS </h1>
+
+
+		<p> number 4 </p>
+	</body>
+</html>
