My commit message

--- a/2personaljourney/page7.html
+++ b/2personaljourney/page7.html
@@ -15,18 +15,7 @@
 </head>
 <body>
   <h1> NO? </h1>
-  <p> 
-    As a compliment, here are more photos of Ato 
-    <p></p>
-  <img src="images/32.jpeg" width="500px" height="300px" alt="Ato at the garden">
-  </p>
 
-  <p>
-  Is he cute? 
-  </p>
-
-    <a href="Page6.html"> YES </a>
-    <p> </p>
-    <a href="Page7.html"> NOT REALLY </a>
+    <a href="Page5.html"> Go back to see his cute face </a>
 </body>
 </html>
