--- a/2personaljourney/page5.html
+++ b/2personaljourney/page5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> YES! </title>
+  <title> YES!  </title>
   <style>
     body {
       background-color: pink; 
@@ -9,21 +9,28 @@
       color: white;
       font-family: sans-serif;
     }
-
+  h3 { color: white; }
   a { color: white; }
+  p { color: grey; }
+  h2 {color: white;}
   </style>
 </head>
 <body>
-  <h1> YES! </h1>
-  <p> 
-    As a compliment, here are more photos of Ato 
+  <h1> YES! He is 4 and a half this year </h1>
+  <h3> As a compliment, here are more photos of Ato </h3>
     <p></p>
-  <img src="images/32.jpeg" width="500px" height="300px" alt="Ato at the garden">
-  </p>
+  <img src="images/32.jpeg" width="500px" height="300px" alt="Model Ato">
+    <p> Ato in my living room </p>
 
-  <p>
+  <img src="images/1.png" width="300px" height="300px" alt="Ato in bed">
+    <p> Ato in bed </p>
+
+  <img src="images/383.jpeg" width="300px" height="300px" alt="Ato at bbq">
+    <p> Ato joining barbeque party </p>
+
+  <h2>
   Is he cute? 
-  </p>
+  </h2>
 
     <a href="Page6.html"> YES </a>
     <p> </p>
