--- a/2personaljourney/page6.html
+++ b/2personaljourney/page6.html
@@ -15,19 +15,18 @@
 </head>
 <body>
   <h1> Thank you!!! </h1>
-  <p> 
+  <pre> 
     Although Ato is in Korea with parents right now, I hope he would visit New York one day. 
 
     He is my family, and adopting him was one of the best thing I did in my life.
+ </pre>
 
-  </p>
+  <h2>
+  Do you know what Ato means in pure Korean? 
+  </h2>
 
-  <p>
-  Is he cute? 
-  </p>
-
-    <a href="Page6.html"> YES </a>
+    <a href="Page8.html"> It means 'present'! </a>
     <p> </p>
-    <a href="Page7.html"> NOT REALLY </a>
+    <a href="Page9.html"> Why should I know </a>
 </body>
 </html>
