--- a/2personaljourney/page6.html
+++ b/2personaljourney/page6.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h1> Thank you!!! </h1>
+  <h1> Thank you! </h1>
   <pre> 
     Although Ato is in Korea with parents right now, I hope he would visit New York one day. 
 
@@ -22,7 +22,7 @@
  </pre>
 
   <h2>
-  Do you know what Ato means in pure Korean? 
+  Do you know what 'Ato' means in pure Korean? 
   </h2>
 
     <a href="Page8.html"> It means 'present'! </a>
