--- a/2personaljourney/page7.html
+++ b/2personaljourney/page7.html
@@ -4,9 +4,9 @@
   <title> Not really </title>
   <style>
     body {
-      background-color: pink; 
+      background-color: black; 
       text-align: center;
-      color: white;
+      color: yellow;
       font-family: sans-serif;
     }
 
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h1> NO? </h1>
+  <h1> ERROR </h1>
 
     <a href="Page5.html"> Go back to see his cute face </a>
 </body>
