--- a/2personaljourney/page8.html
+++ b/2personaljourney/page8.html
@@ -10,21 +10,29 @@
       font-family: sans-serif;
     }
 
-  a { color: white; }
+  a { color: white; 
+      font-size: 10pt;
+    }
+
+  pre { font-size: 36px
+   }
+
   </style>
 </head>
 <body>
   <h1> ATO MEANS PRESENT </h1>
   <p> 
-  <img src="images/153.png" width="400px" height="300px" alt="Baby ato">
+  
+  He is the best gift in my life 
   </p>
 
   <p>
-  Guess how old he is now 
+    Thank you for spending time with Ato 
   </p>
 
-    <a href="Page4.html"> 12 </a>
-    <p> </p>
-    <a href="Page5.html"> 4 and a half </a>
+  <pre> B Y E B Y E </pre>
+  
+  <a href="index.html"> Take me back to our first encounter </a>
+
 </body>
 </html>
