--- a/2personaljourney/page4.html
+++ b/2personaljourney/page4.html
@@ -5,7 +5,9 @@
   <style>
     body {
       background-color: black;
-      color: red;
+      color: yellow;
+      text-align: center;
+      font-family: sans-serif;
     }
 
   a { color: white; }
