--- a/1htmlquiz/index.html
+++ b/1htmlquiz/index.html
@@ -14,7 +14,7 @@
 
 <img alt="My puppy Ato in front of my house"" src="Ato.png"> 
 
-<p> Answer for #5: All HTML documents have tags and attributes. </p>
+<p> Answer for #5: All HTML documents have head and body </p>
 
 <ol>
 	<li> France </li>
@@ -37,9 +37,13 @@
 <ul>
 	<li class="K-Pop"> Offonoff </li>
 	<li class="Pop"> Mo </li>
+	<li class="K-Pop"> G-Soul </li>
+	<li class="Hiphop"> DPR Live </li>
 	<li class="Hiphop"> HashSwan </li>
+	<li class="Pop"> Honne </li>
 </ul>
 
+<p> A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can). An inline element does not start on a new line and only takes up as much width as necessary. </p>
 
 
 </body>
