--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
-<style>
-	body {background-color: yellow;}
-</style>
-
+<!DOCTYPE html>
+<html>
 <head>
-	<title>seowon</title>
+	<title> Seowon's Homepage </title>
+	<link rel="stylesheet" href="index.css">
 </head>
-	<body>
+<body>
+	<h1> IT IS FEBRUARY  </h1>
+	<h2> are you excited? </h2>
 
-		<h1> SUPERSTITIONS </h1>
-
-
-		<p> number 4 </p>
-	</body>
+</body>
 </html>
