My commit message

--- a/2personaljourney/page3.html
+++ b/2personaljourney/page3.html
@@ -23,8 +23,8 @@
   Guess how old he is now 
   </p>
 
-    <a href="Page4.html"> 12 </a>
+    <a href="page4.html"> 12 </a>
     <p> </p>
-    <a href="Page5.html"> 4 and a half </a>
+    <a href="page5.html"> 4 and a half </a>
 </body>
 </html>
