--- a/2personaljourney/page5.html
+++ b/2personaljourney/page5.html
@@ -32,8 +32,8 @@
   Is he cute? 
   </h2>
 
-    <a href="Page6.html"> YES </a>
+    <a href="page6.html"> YES </a>
     <p> </p>
-    <a href="Page7.html"> NOT REALLY </a>
+    <a href="page7.html"> NOT REALLY </a>
 </body>
 </html>
