--- a/2personaljourney/page7.html
+++ b/2personaljourney/page7.html
@@ -16,6 +16,6 @@
 <body>
   <h1> ERROR </h1>
 
-    <a href="Page5.html"> Go back to see his cute face </a>
+    <a href="page5.html"> Go back to see his cute face </a>
 </body>
 </html>
