--- a/2personaljourney/page6.html
+++ b/2personaljourney/page6.html
@@ -25,8 +25,8 @@
   Do you know what 'Ato' means in pure Korean? 
   </h2>
 
-    <a href="Page8.html"> It means 'present'! </a>
+    <a href="page8.html"> It means 'present'! </a>
     <p> </p>
-    <a href="Page9.html"> Why should I know </a>
+    <a href="page9.html"> Why should I know </a>
 </body>
 </html>
