--- a/0Studio/1clickclick/about.html
+++ b/0Studio/1clickclick/about.html
@@ -1,26 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> About T E  M   P   O </title>
+	<title> About TEMPO </title>
 	<style>
-		body { 
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-	 	}
-	 	
+		body {
+			text-align: center;
+			font-size: 10pt;
+		}
+
 		a {		
 			color: black;
 			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
+			font-family: "georgia light";
+			font-size: 25pt;
+		}
+
+		pre {
+			font-family: acumin pro;
+			font-weight: lighter;
 		}
 
 	</style>
 </head>
 <body>
-	<div class="how" style="margin-top: 30%; margin-bottom: 0px"> Hello
- 	<a href="page1.html" style="margin-left: 16%; padding-bottom: 30%" > Cottony Snowflakes </a>
- 	<p> by Choi, Do-Sun </p>
-</body>
+ 	<a href="page1.html" class="tempo"> TEMPO </a>
+ 	<pre> is a project that translates the tempo of Korean poem into English by using scrolls on webpages. </pre>
+ 	<pre> The spacing between words/phrases of the poem is set in certain tempo to pace your reading. </pre>
+ 	<pre> The poem you will be reading is "Cottony Snowflakes" by a Korean poet Choi, Do Sun </pre>
+ 	<pre> Here is the original text of Cottony Snowflakes. </pre>
+
+ 	<br> 
+ 	<br>
+ 	<br>
+ 	<pre> 함박눈—최돈선
+
+아무 때나
+함박눈이 왔음 좋겠다.
+그래서 강아지처럼
+철부지가 되었음 좋겠다.
+
+아무 뜻 없이
+긴 겨울나무 사이로 떠났으면 좋겠다.
+
+그렇게 홀로
+하얀 발자국이었으면 좋겠다.
+
+사랑하는 사람
+모두 사랑하는 사람
+저 먼 겨울 끝에 서서
+나를 반겨주었으면 좋겠다.
+
+서로 서로 야윈 등 두드리며
+함빡 웃어봤음 좋겠다.
+펑펑 함박눈처럼 웃어봤음 좋겠다.
+
+그래
+
+그랬으면 좋겠다.
+
+너무 아파
+너무 슬퍼
+너무 가난해 타이트하게 붙이기 
+
+이 모든 것
+함박눈 펑펑 내려
+하얗게 하얗게 지워졌음 좋겠다.
+
+천치같이
+그런,
+하얀 눈사람이었으면 좋겠다.</pre>
+<br>
+<br>
+
+ <pre style ="color: skyblue"> Note: This website is designed to be experienced in full screen mode (width of 1440px). </pre>
+
+<br>
+<br>
 </html>
