--- a/0Studio/1clickclick/page10.html
+++ b/0Studio/1clickclick/page10.html
@@ -2,34 +2,23 @@
 <html>
 <head>
 	<title> Stanza 2: lines 6-7 </title>
-	<style>
-		body { 
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-	 	}
-	 	
-		a {
-		
-			color: black;
-			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
-		}
-
-		pre {
-			font-size: 80pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<div class="to" style="margin-top: 30%; margin-bottom: 2000px"> to laugh </div>
- 	<div class="laughs" style="margin-left: 8%; margin-bottom: 250px;"> hearty laughs </div>
- 	<div class="patting" style="margin-left: 16%; margin-bottom: 250px" > patting </div>
- 	<div class="one" style="margin-left: 24%; margin-bottom: 2000px "> one </div>
- 	<div class="another" style="margin-left: 32%; margin-bottom: 2000px "> another's </div>
- 	<a href="page11.html" style="margin-left: 40%; padding-bottom: 30%" > lean backs. </div>
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: white; font-family:helvetica; " > ? </a>
+	</div>
+	<div class="tempo">
+		<a href="page1.html" style="text-decoration: none; color: black;"> TEMPO </a>
+	</div>
+
+	<div class="poem"> 
+		<div class="to" style="margin-top: 30%; margin-bottom: 380px"> to laugh </div>
+ 		<div class="laughs" style="margin-left: 8%; margin-bottom: 1500px;"> hearty laughs </div>
+ 		<div class="patting" style="margin-left: 16%; margin-bottom: 800px" > patting </div>
+ 		<div class="one" style="margin-left: 24%; margin-bottom: 350px "> one </div>
+ 		<div class="another" style="margin-left: 32%; margin-bottom: 2700px "> another's </div>
+ 		<a href="page11.html" style="margin-left: 40%; padding-bottom: 30%" > lean backs. </a>
+ 	</div>
 </body>
 </html>
