--- a/0Studio/1clickclick/page12.html
+++ b/0Studio/1clickclick/page12.html
@@ -2,31 +2,20 @@
 <html>
 <head>
 	<title> Stanza 2: lines 9-10 </title>
-	<style>
-		body { 
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-	 	}
-	 	
-		a {
-		
-			color: black;
-			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
-		}
-
-		pre {
-			font-size: 80pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<div class="to" style="margin-top: 30%; margin-bottom: 2000px"> to laugh </div>
- 	<div class="hearty" style="margin-left: 8%; margin-bottom: 250px;"> hearty laughs </div>
- 	<a href="page13.html" style="margin-left: 16%; padding-bottom: 30%" > like these cottony snowflakes. </div>
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: white; font-family:helvetica; " > ? </a>
+	</div>
+	<div class="tempo">
+		<a href="page1.html" style="text-decoration: none; color: black;"> TEMPO </a>
+	</div>
+
+	<div class="poem"> 
+		<div class="to" style="margin-top: 30%; margin-bottom: 380px"> to laugh </div>
+ 		<div class="hearty" style="margin-left: 8%; margin-bottom: 3800px;"> hearty laughs </div>
+ 		<a href="page13.html" style="margin-left: 16%; padding-bottom: 30%" > like these cottony snowflakes. </a>
+ 	</div>
 </body>
 </html>
