--- a/0Studio/1clickclick/page15.html
+++ b/0Studio/1clickclick/page15.html
@@ -2,31 +2,20 @@
 <html>
 <head>
 	<title> Stanza 3: lines 4-5 </title>
-	<style>
-		body { 
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-	 	}
-	 	
-		a {
-		
-			color: black;
-			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
-		}
-
-		pre {
-			font-size: 80pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<div class="painful" style="margin-top: 300%; margin-bottom: -50px"> I once felt so painful, </div>
- 	<div class="sorrowful" style="margin-left: 8%; margin-bottom: -50px;"> I once felt so sorrowful, </div>
- 	<a href="page16.html" style="margin-left: 16%; padding-bottom: 30%" > I once felt so poor. </div>
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: white; font-family:helvetica; " > ? </a>
+	</div>
+	<div class="tempo">
+		<a href="page1.html" style="text-decoration: none; color: black;"> TEMPO </a>
+	</div>
+
+	<div class="poem"> 
+		<div class="painful" style="margin-top: 300%; margin-bottom: -50px"> I once felt so painful, </div>
+ 		<div class="sorrowful" style="margin-left: 8%; margin-bottom: -50px;"> I once felt so sorrowful, </div>
+ 		<a href="page16.html" style="margin-left: 16%; padding-bottom: 30%" > I once felt so poor. </a>
+ 	</div>
 </body>
 </html>
