--- a/0Studio/1clickclick/page16.html
+++ b/0Studio/1clickclick/page16.html
@@ -2,24 +2,17 @@
 <html>
 <head>
 	<title> Stanza 4: line 1 </title>
-	<style type="text/css"> 
-		body {
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-			text-align: center;
-			padding-top: 40%;
-	}
-		a {
-			color: black;
-			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
-			text-align: center;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<a href="page17.html" style="padding-top: 50%;"> It would be wonderful </a>
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: white; font-family:helvetica; " > ? </a>
+	</div>
+	<div class="tempo">
+		<a href="page1.html" style="text-decoration: none; color: black;"> TEMPO </a>
+	</div>
+	<div class="wonderful">
+		<a href="page17.html" style="color: black;"> It would be wonderful </a>
+	</div>
 </body>
 </html>
