--- a/0Studio/1clickclick/page17.html
+++ b/0Studio/1clickclick/page17.html
@@ -2,38 +2,27 @@
 <html>
 <head>
 	<title> Stanza 2: lines 6-7 </title>
-	<style>
-		body { 
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-	 	}
-	 	
-		a {
-		
-			color: black;
-			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
-		}
-
-		pre {
-			font-size: 80pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<div class="to" style="margin-top: 30%; margin-bottom: 2000px"> to have the </div>
- 	<div class="cottony" style="margin-left: 8%; margin-bottom: 250px;"> cottony snowflakes, </div>
- 	<div class="pouring" style="margin-left: 16%; margin-bottom: 250px" > pouring </div>
- 	<div class="down" style="margin-left: 24%; margin-bottom: 2000px "> down </div>
- 	<div class="endlessly" style="margin-left: 32%; margin-bottom: 2000px "> endlessly, </div>
- 	<div class="erasing" style="margin-left: 40%; margin-bottom: 2000px "> erasing </div>
- 	<div class="all" style="margin-left: 48%; margin-bottom: 2000px "> all </div>
- 	<div class="of" style="margin-left: 56%; margin-bottom: 2000px "> of </div>
- 	<div class="this" style="margin-left: 64%; margin-bottom: 2000px "> this </div>
- 	<a href="page18.html" style="margin-left: 72%; padding-bottom: 30%" > into white. </div>
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: white; font-family:helvetica; " > ? </a>
+	</div>
+	<div class="tempo">
+		<a href="page1.html" style="text-decoration: none; color: black;"> TEMPO </a>
+	</div>
+
+	<div class="poem"> 
+		<div class="to" style="margin-top: 30%; margin-bottom: 400px"> to have the </div>
+ 		<div class="cottony" style="margin-left: 8%; margin-bottom: 2500px;"> cottony snowflakes, </div>
+ 		<div class="pouring" style="margin-left: 16%; margin-bottom: 50px" > pouring </div>
+ 		<div class="down" style="margin-left: 24%; margin-bottom: 1500px "> down </div>
+ 		<div class="endlessly" style="margin-left: 32%; margin-bottom: 1700px "> endlessly, </div>
+ 		<div class="erasing" style="margin-left: 40%; margin-bottom: 1000px "> erasing </div>
+ 		<div class="all" style="margin-left: 48%; margin-bottom: 100px "> all </div>
+ 		<div class="of" style="margin-left: 56%; margin-bottom: 800px "> of </div>
+ 		<div class="this" style="margin-left: 64%; margin-bottom: 2500px "> this </div>
+ 		<a href="page18.html" style="margin-left: 72%; padding-bottom: 30%" > into white. </a>
+ 	</div>
 </body>
 </html>
