--- a/0Studio/1clickclick/page4.html
+++ b/0Studio/1clickclick/page4.html
@@ -2,36 +2,25 @@
 <html>
 <head>
 	<title> Stanza 1: lines 6-7 </title>
-	<style>
-		body { 
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-	 	}
-	 	
-		a {
-		
-			color: black;
-			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
-		}
-
-		pre {
-			font-size: 80pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<div class="to" style="margin-top: 30%; margin-bottom: 2000px"> to leave </div>
- 	<div class="without" style="margin-left: 8%; margin-bottom: 250px;"> without </div>
- 	<div class="any" style="margin-left: 16%; margin-bottom: 250px" > any </div>
- 	<div class="purpose" style="margin-left: 24%; margin-bottom: 2000px "> purpose, </div>
-	<div class="passing" style="margin-left: 32%; margin-bottom: 300px"> passing  </div>
-	<div class="through" style="margin-left: 40%; margin-bottom: 2500px" > through the </div>
-	<div class="long" style="margin-left: 48%; margin-bottom: 700px" > long </div>
-	<a href="page5.html" style="margin-left: 56%; padding-bottom: 30%" > winter trees. </div>
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: white; font-family:helvetica; " > ? </a>
+	</div>
+	<div class="tempo">
+		<a href="page1.html" style="text-decoration: none; color: black;"> TEMPO </a>
+	</div>
+
+	<div class="poem"> 
+		<div class="to" style="margin-top: 30%; margin-bottom: 2000px"> to leave </div>
+ 		<div class="without" style="margin-left: 8%; margin-bottom: 250px;"> without </div>
+ 		<div class="any" style="margin-left: 16%; margin-bottom: 250px" > any </div>
+ 		<div class="purpose" style="margin-left: 24%; margin-bottom: 2000px "> purpose, </div>
+		<div class="passing" style="margin-left: 32%; margin-bottom: 300px"> passing  </div>
+		<div class="through" style="margin-left: 40%; margin-bottom: 2500px" > through the </div>
+		<div class="long" style="margin-left: 48%; margin-bottom: 700px" > long </div>
+		<a href="page5.html" style="margin-left: 56%; padding-bottom: 30%"> winter trees. </div>
+	</div>
 </body>
 </html>
