--- a/0Studio/1clickclick/page6.html
+++ b/0Studio/1clickclick/page6.html
@@ -2,33 +2,22 @@
 <html>
 <head>
 	<title> Stanza 1: lines 9-10 </title>
-	<style>
-		body { 
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-	 	}
-	 	
-		a {
-		
-			color: black;
-			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
-		}
-
-		pre {
-			font-size: 80pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<div class="to" style="margin-top: 30%; margin-bottom: 2000px"> to become </div>
- 	<div class="white" style="margin-left: 8%; margin-bottom: 250px;"> white </div>
- 	<div class="footsteps" style="margin-left: 16%; margin-bottom: 250px" > footsteps </div>
- 	<div class="alone" style="margin-left: 24%; margin-bottom: 2000px "> alone </div>
-	<a href="page7.html" style="margin-left: 32%; padding-bottom: 30%" > like that. </div>
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: white; font-family:helvetica; " > ? </a>
+	</div>
+	<div class="tempo">
+		<a href="page1.html" style="text-decoration: none; color: black;"> TEMPO </a>
+	</div>
+
+	<div class="poem"> 
+		<div class="to" style="margin-top: 30%; margin-bottom: 2000px"> to become </div>
+ 		<div class="white" style="margin-left: 8%; margin-bottom: 250px;"> white </div>
+ 		<div class="footsteps" style="margin-left: 16%; margin-bottom: 3500px" > footsteps </div>
+ 		<div class="alone" style="margin-left: 24%; margin-bottom: 5000px "> alone </div>
+		<a href="page7.html" style="margin-left: 32%; padding-bottom: 30%" > like that. </a>
+	</div>
 </body>
 </html>
