--- a/0Studio/1clickclick/page2.html
+++ b/0Studio/1clickclick/page2.html
@@ -2,36 +2,31 @@
 <html>
 <head>
 	<title> Stanza 1: lines 2-4 </title>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<style>
-		body { 
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-	 	}
-	 	
-		a {
-		
-			color: black;
-			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
+	 	pre {
+	 		font-family: times new roman light;
 		}
 
-		pre {
-			font-size: 80pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-		}
 	</style>
 </head>
 <body>
-	<div class="to-have" style="margin-top: 30%; margin-bottom: 350px"> to have</div>
- 	<div class="snowflakes" style="margin-left: 8%; margin-bottom: 800px;"> cottony snowflakes </div>
- 	<div class="all" style="margin-left: 16%; margin-bottom: 300px" > all the </div>
- 	<div class="time" style="margin-left: 24%; margin-bottom: 1500px "> time. </div>
- 	<pre class="puppy" style="margin-left: 32%; margin-bottom: 1500px ;"> puppy-    like, </pre>
-	<div class="would" style="margin-left: 40%; margin-bottom: 300px"> I would like to be  </div>
-	<div class="child" style="margin-left: 48%; margin-bottom: 750px" > a child </div>
-	<a href="page3.html" style="margin-left: 56%; padding-bottom: 30% " > again. </div>
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: white; font-family:helvetica; " > ? </a>
+	</div>
+	<div class="tempo">
+		<a href="page1.html" style="text-decoration: none; color: black;"> TEMPO </a>
+	</div>
+
+	<div class="poem"> 
+		<div class="to-have" style="margin-top: 30%; margin-bottom: 350px"> to have</div>
+ 		<div class="snowflakes" style="margin-left: 8%; margin-bottom: 800px;"> cottony snowflakes </div>
+ 		<div class="all" style="margin-left: 16%; margin-bottom: 300px" > all the </div>
+ 		<div class="time" style="margin-left: 24%; margin-bottom: 1500px "> time. </div>
+ 		<pre class="puppy" style="margin-left: 32%; margin-bottom: 1500px ;"> puppy-    like, </pre>
+		<div class="would" style="margin-left: 40%; margin-bottom: 300px"> I would like to be  </div>
+		<div class="child" style="margin-left: 48%; margin-bottom: 850px" > a child </div>
+		<a href="page3.html" style="color:black; text-decoration: underline; margin-left: 56%; padding-bottom: 30%"> again. </a>
+	</div>
 </body>
 </html>
