--- a/0Studio/1clickclick/page8.html
+++ b/0Studio/1clickclick/page8.html
@@ -2,42 +2,31 @@
 <html>
 <head>
 	<title> Stanza 2: lines 2–4 </title>
-	<style>
-		body { 
-			font-size: 65pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-	 	}
-	 	
-		a {
-		
-			color: black;
-			text-decoration: underline;
-			font-family: helvetica neue;
-			font-weight: lighter; 
-		}
-
-		pre {
-			font-size: 80pt;
-			font-family: helvetica neue;
-			font-weight: lighter;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<div class="to" style="margin-top: 30%; margin-bottom: 2000px"> to have a </div>
- 	<div class="loved" style="margin-left: 8%; margin-bottom: 250px;"> loved </div>
- 	<div class="one" style="margin-left: 16%; margin-bottom: 250px" > one– </div>
- 	<div class="the" style="margin-left: 24%; margin-bottom: 2000px "> the one </div>
- 	<div class="everybody" style="margin-left: 32%; margin-bottom: 2000px "> everybody </div>
- 	<div class="loves" style="margin-left: 40%; margin-bottom: 2000px "> loves– </div>
- 	<div class="standing" style="margin-left: 48%; margin-bottom: 2000px "> standing </div>
- 	<div class="at" style="margin-left: 56%; margin-bottom: 2000px "> at the </div>
- 	<div class="far" style="margin-left: 64%; margin-bottom: 2000px "> far  </div>
- 	<div class="end" style="margin-left: 72%; margin-bottom: 2000px "> end  </div>
- 	<div class="winter" style="margin-left: 0%; margin-bottom: 2000px "> of the winter, </div>
- 	<div class="to" style="margin-left: 8%; margin-bottom: 2000px "> to </div>
- 	<div class="greet" style="margin-left: 16%; margin-bottom: 2000px "> greet </div>
-	<a href="page9.html" style="margin-left: 24%; padding-bottom: 30%" > me. </div>
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: white; font-family:helvetica; " > ? </a>
+	</div>
+	<div class="tempo">
+		<a href="page1.html" style="text-decoration: none; color: black;"> TEMPO </a>
+	</div>
+
+	<div class="poem"> 
+		<div class="to" style="margin-top: 30%; margin-bottom: 3000px"> to have a </div>
+ 		<div class="loved" style="margin-left: 8%; margin-bottom: 3000px;"> loved </div>
+ 		<div class="one" style="margin-left: 16%; margin-bottom: 500px" > one– </div>
+ 		<div class="the" style="margin-left: 24%; margin-bottom: 2500px "> the one </div>
+ 		<div class="everybody" style="margin-left: 32%; margin-bottom: 2500px "> everybody </div>
+ 		<div class="loves" style="margin-left: 40%; margin-bottom: 2500px "> loves– </div>
+ 		<div class="standing" style="margin-left: 48%; margin-bottom: 250px "> standing </div>
+ 		<div class="at" style="margin-left: 56%; margin-bottom: 1500px "> at the </div>
+ 		<div class="far" style="margin-left: 64%; margin-bottom: 1500px "> far  </div>
+ 		<div class="end" style="margin-left: 72%; margin-bottom: 1000px "> end  </div>
+ 		<div class="winter" style="margin-left: 0%; margin-bottom: 200px "> of the winter, </div>
+ 		<div class="to" style="margin-left: 8%; margin-bottom: 1000px "> to </div>
+ 		<div class="greet" style="margin-left: 16%; margin-bottom: 1800px"> greet </div>
+		<a href="page9.html" style="margin-left: 24%; padding-bottom: 30%" > me. </a>
+	</div>
 </body>
 </html>
