--- a/0Studio/1clickclick/about.html
+++ b/0Studio/1clickclick/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title> About TEMPO </title>
+	<link rel="icon" href="assets/imges/favicon.png" type="image/x-icon" />
 	<style>
 		body {
 			text-align: center;
