--- a/0Studio/1clickclick/page12.html
+++ b/0Studio/1clickclick/page12.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title> Stanza 2: lines 9-10 </title>
+	<link rel="icon" href="assets/imges/favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
