My commit message

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<h1> IT IS FEBRUARY  </h1>
-	<h2> are you excited? </h2>
+	<a href="0studio/1clickclick/page1.html" > clickclick </a>
 
 </body>
 </html>
