My commit message

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<a href="0studio/1clickclick/page1.html" > clickclick </a>
+	<a href="0studio/1clickclick/page1.html" style="color: black"> click click </a>
 
 </body>
 </html>
