--- a/coding-from-life/sketch-2/index.html
+++ b/coding-from-life/sketch-2/index.html
@@ -8,17 +8,35 @@
   <body>
   
     <div class="frame">
-      <!-- Your HTML goes here -->
+      <!-- Your HTML goes here --> 
+      <div class="flower"></div>
+        <div class="pedals">
+          <div class="pedal pedal-1"></div>
+          <div class="pedal pedal-2"></div>
+          <div class="pedal pedal-3"></div>
+          <div class="pedal pedal-4"></div>
+          <div class="pedal pedal-5"></div>
+          <div class="pedal stem"></div>
+        </div>
+      <div class="bluebookl"></div>
+      <div class="bluebookr"></div>
+      <div class="spine"></div>
       <div class="banana"></div>
       <div class="candle"></div>
       <div class="vase"></div>
       <div class="table"></div>
+      <div class="legl"></div>
+      <div class="legr"></div>
       <div class="book-top"></div>
       <div class="book-middle"></div>
-      <div class="book-bottom"></div>
-      <div class="flower"></div>
-      <div class="bluebook"></div>
-    
+      <div class="book-bottom"></div>      
+      <div class="can"></div>
+      <div class="canb"></div>
+      <div class="catbody"></div>
+      <div class="cat"></div>
+
+
+  
       
     </div>
 
