--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<a href="0studio/1clickclick/page1.html" style="color: black"> clickclick </a>
+	<a href="0studio/1clickclick/page1.html" style="color: white"> 1. Click, Click </a>
+	<br>
+	<a href="coding-from-life/sketch-2/index.html" style="color: white"> 2. Coding From Life </a>
 
 </body>
 </html>
