--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<a href="0studio/1clickclick/page1.html" style="color: white"> 1. Click, Click </a>
-	<br>
-	<a href="coding-from-life/sketch-2/index.html" style="color: white"> 2. Coding From Life </a>
+	
+	<p style="color: #c53939; "> SEOWON KIM'S PROJECTS </p>
+	<div class="project">
+		<a href="0studio/1clickclick/page1.html" style="color: white; text-decoration: none;"> TEMPO </a>
+		<br>
+		<a href="3personal-journey-archive/index.html" style="color: white; text-decoration: none;" > PEEP @ </a>
+		<br>
+		<a href="4coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;"> CODING FROM LIFE </a>
+		<br>
+		<a href="5coding-from-life-archive/index.html" style="color: white; text-decoration: none;"> C.F.L ARCHIVE </a>
+		<br>
+		<a href="0studio/2obsession/index.html" style="color: white; text-decoration: none;"> OBSESSION </a>
+	</div>
+
 
 </body>
 </html>
