--- a/4coding-from-life/sketch-2/index.html
+++ b/4coding-from-life/sketch-2/index.html
@@ -9,6 +9,7 @@
   
     <div class="frame">
       <!-- Your HTML goes here --> 
+      <div class="catbody"></div>
       <div class="flower"></div>
         <div class="pedals">
           <div class="pedal pedal-1"></div>
@@ -21,6 +22,7 @@
       <div class="bluebookl"></div>
       <div class="bluebookr"></div>
       <div class="spine"></div>
+      <div class="catbody"></div>
       <div class="banana"></div>
       <div class="candle"></div>
       <div class="vase"></div>
@@ -32,9 +34,8 @@
       <div class="book-bottom"></div>      
       <div class="can"></div>
       <div class="canb"></div>
-      <div class="catbody"></div>
       <div class="cat"></div>
-
+      <div class="tail"></div>
 
   
       
