--- a/3personal-journey-archive/index.html
+++ b/3personal-journey-archive/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title> Peep! </title>
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
 </head>
 <body>
 	<h1> PEEP @ </h1>
