--- a/4coding-from-life/sketch-2/index.html
+++ b/4coding-from-life/sketch-2/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Coding from Life – Sketch 2</title>
+    <title> Pastel </title>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-  
+    
+
     <div class="frame">
-      <!-- Your HTML goes here --> 
       <div class="catbody"></div>
       <div class="flower"></div>
         <div class="pedals">
