--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Seowon's Homepage </title>
+	<title> 김서원 </title>
+	<link rel="icon" href="99assets/imgs/favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	
-	<p style="color: #c53939; "> SEOWON KIM'S PROJECTS </p>
-	<div class="project">
-		<a href="0studio/1clickclick/page1.html" style="color: white; text-decoration: none;"> TEMPO </a>
-		<br>
-		<a href="3personal-journey-archive/index.html" style="color: white; text-decoration: none;" > PEEP @ </a>
-		<br>
-		<a href="4coding-from-life/sketch-2/index.html" style="color: white; text-decoration: none;"> CODING FROM LIFE </a>
-		<br>
-		<a href="5coding-from-life-archive/index.html" style="color: white; text-decoration: none;"> C.F.L ARCHIVE </a>
-		<br>
-		<a href="0studio/2obsession/index.html" style="color: white; text-decoration: none;"> OBSESSION </a>
-	</div>
 
+	<p class="seowon" style="color: black; "> SEOWON KIM </p>
+
+	<div class="project">
+		<a href="0studio/1clickclick/page1.html" style="color: #abd8c5; text-decoration: underline;"> TEMPO </a>
+		<br>
+		<a href="3personal-journey-archive/index.html" style="color: #fdc26f; text-decoration: underline;" > PEEP @ </a>
+		<br>
+		<a href="4coding-from-life/sketch-2/index.html" style="color: #f7c8c8; text-decoration: underline;"> PASTEL </a>
+		<br>
+		<a href="5coding-from-life-archive/index.html" style="color: #827c7c; text-decoration: line-through;"> C.F.L ARCHIVE </a>
+		<br>
+		<a href="0studio/2obsession/index.html" style="color: #827c7c; text-decoration: line-through;"> OBSESSION </a>
+	</div>
+	<img src="paper.png" alt="paper">
 
 </body>
 </html>
