--- a/4coding-from-life/sketch-2/index.html
+++ b/4coding-from-life/sketch-2/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title> Pastel </title>
+    <link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
+
   </head>
   <body>
     
