--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<p class="seowon" style="color: black; "> SEOWON KIM </p>
 
 	<div class="project">
-		<a href="0studio/1clickclick/page1.html" style="color: #abd8c5; text-decoration: underline;"> TEMPO </a>
+		<a href="studio/1clickclick/page1.html" style="color: #abd8c5; text-decoration: underline;"> TEMPO </a>
 		<br>
 		<a href="3personal-journey-archive/index.html" style="color: #fdc26f; text-decoration: underline;" > PEEP @ </a>
 		<br>
@@ -18,7 +18,7 @@
 		<br>
 		<a href="5coding-from-life-archive/index.html" style="color: #827c7c; text-decoration: line-through;"> C.F.L ARCHIVE </a>
 		<br>
-		<a href="0studio/2obsession/index.html" style="color: #827c7c; text-decoration: line-through;"> OBSESSION </a>
+		<a href="studio/2obsession/index.html" style="color: #827c7c; text-decoration: line-through;"> OBSESSION </a>
 	</div>
 	<img src="paper.png" alt="paper">
 
