--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> 김서원 </title>
-	<link rel="icon" href="99assets/imgs/favicon.png" type="image/x-icon" />
+	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
