--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<br>
 		<a href="4coding-from-life/sketch-2/index.html" style="color: #f7c8c8; text-decoration: underline;"> PASTEL </a>
 		<br>
-		<a href="5coding-from-life-archive/index.html" style="color: #827c7c; text-decoration: line-through;"> C.F.L ARCHIVE </a>
+		<a href="5coding-from-life-archive/index.html" style="color: #827c7c; text-decoration: underline;"> C.F.L ARCHIVE </a>
 		<br>
 		<a href="studio/2obsession/index.html" style="color: #827c7c; text-decoration: line-through;"> OBSESSION </a>
 	</div>
