--- a/5coding-from-life-archive/index.html
+++ b/5coding-from-life-archive/index.html
@@ -8,29 +8,29 @@
 <body>
 	<h1> CFL ARCHIVE </h1>
 
-	<a href="seowxx.github.io/4coding-from-life/sketch-2/index.html"> SEOWON KIM </a>
+	<a href="https://seowxx.github.io/4coding-from-life/sketch-2/index.html"> SEOWON KIM </a>
 	<br>
-	<a href="funge549.github.io/coding-from-life/index.html"> EVELIN ZHONG </a>
+	<a href="https://funge549.github.io/coding-from-life/index.html"> EVELIN ZHONG </a>
 	<br>
-	<a href="garcv701.github.io/coding-from-life/index.html"> VINCENT GARCIA </a>
+	<a href="https://garcv701.github.io/coding-from-life/index.html"> VINCENT GARCIA </a>
 	<br>
-	<a href="yangmaya.github.io/coding-from-life/index.html"> YANGCHEN GRUBEN </a>
+	<a href="https://yangmaya.github.io/coding-from-life/index.html"> YANGCHEN GRUBEN </a>
 	<br>
-	<a href="esragumrukculer.github.io/coding-from-life/sketch-2/index.html"> ESRA GUMRUKCULER </a>
+	<a href="https://esragumrukculer.github.io/coding-from-life/sketch-2/index.html"> ESRA GUMRUKCULER </a>
 	<br>
-	<a href="kayaa946.github.io/sketch-2/index.html"> YAREN KAYA </a>
+	<a href="https://kayaa946.github.io/sketch-2/index.html"> YAREN KAYA </a>
 	<br>
-	<a href="kims889.github.io/coding-from-life/sketch-2/index.html"> SOYEON KIM </a>
+	<a href="https://kims889.github.io/coding-from-life/sketch-2/index.html"> SOYEON KIM </a>
 	<br>
-	<a href="leej312.github.io/Project_Lab/coding-from-life/sketch-2/index.html"> JAHYUN LEE </a>
+	<a href="https://leej312.github.io/Project_Lab/coding-from-life/sketch-2/index.html"> JAHYUN LEE </a>
 	<br>
-	<a href="lie771.github.io/coding-from-life/index.html"> EMILY LI </a>
+	<a href="https://lie771.github.io/coding-from-life/index.html"> EMILY LI </a>
 	<br>
-	<a href="kmpnguyen0.github.io/coding-from-life/sketch-2/index.html"> KHE NGUYEN </a>
+	<a href="https://kmpnguyen0.github.io/coding-from-life/sketch-2/index.html"> KHE NGUYEN </a>
 	<br>
-	<a href="privv824.github.io/coding-from-life/sketch-2/index.html"> VINCENT PRIVITERA </a>
+	<a href="https://privv824.github.io/coding-from-life/sketch-2/index.html"> VINCENT PRIVITERA </a>
 	<br>
-	<a href="walde906.github.io/coding-from-life/sketch-2/index.html"> EMIL WALDRON </a>
+	<a href="https://walde906.github.io/coding-from-life/sketch-2/index.html"> EMIL WALDRON </a>
 
 	<p> KRISTEN CHIK/SHUTING GUO/PRITHI KHALIQUE's works are currently not available </p>
 
