--- a/5coding-from-life-archive/index.html
+++ b/5coding-from-life-archive/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
 	<h1> CFL ARCHIVE </h1>
-
-
-	<a href="https://funge549.github.io/coding-from-life/index.html"> EVELIN ZHONG </a>
-	<br>
+	
 	<a href="https://garcv701.github.io/coding-from-life/index.html"> VINCENT GARCIA </a>
 	<br>
 	<a href="https://yangmaya.github.io/coding-from-life/index.html"> YANGCHEN GRUBEN </a>
@@ -32,8 +29,14 @@
 	<a href="https://privv824.github.io/coding-from-life/sketch-2/index.html"> VINCENT PRIVITERA </a>
 	<br>
 	<a href="https://walde906.github.io/coding-from-life/sketch-2/index.html"> EMIL WALDRON </a>
+	<br>
+	<a href="https://funge549.github.io/coding-from-life/index.html"> EVELIN ZHONG </a>
 
-	<p> KRISTEN CHIK/SHUTING GUO/PRITHI KHALIQUE's works are currently not available </p>
+	<p> KRISTEN CHIK / SHUTING GUO / PRITHI KHALIQUE's works are currently not available </p>
+
+	<div class="button"> 
+		<a href="about.html" style="text-decoration: none; color: black; font-family: futura; " > ? </a>
+	</div>
 
 </body>
 </html>
