--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title> OBSESSION </title>
+	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
+	<p> NOT YET! </p>
 </body>
 </html>
