--- a/3_personal-journey-archive/index.html
+++ b/3_personal-journey-archive/index.html
@@ -17,12 +17,11 @@
 	<a href="https://yangmaya.github.io/Labs/Personal Journey/index.html"> YANGCHEN'S MORNING </a> ––––– 
 	<a href="https://esragumrukculer.github.io/week2/index.html"> ESRA'S CARVING FOR YOGURT </a> –––––
 	<a href="https://shutingguo.github.io/personal experience/homepage.html"> SHUTING'S TWO HOMETOWNS</a> –––––
-	<a href="https://khalp570.github.io/personaljourney/Index.html"> PRITHI'S GIFS </a> –––––
 	<a href="https://lie771.github.io/personal-journey/index.html"> EMILY'S FAMILY </a> –––––
 	<a href="https://kmpnguyen0.github.io/Week%201%20-%20Personal%20Journal/persionaljournal.html"> KHE'S HOTPOT RECIPE </a> –––––
 	<a href="https://walde906.github.io/personal-journey/index.html"> EMIL'S ROADTRIP </a> 
 
-	<p> can't PEEP @ VINCENT P'S and YAREN'S yet </p>
+	<p> can't PEEP @ VINCENT P'S, PRITHI'S, and YAREN'S yet </p>
 
 
 </body>
