--- a/5_coding-from-life-archive/about.html
+++ b/5_coding-from-life-archive/about.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-	
-	<div class="cfl">
-		<a href="index.html" style="text-decoration: none; font-size: 50pt; font-weight: bold; font-family: futura;"> CODING FROM LIFE (CFL) </a>
-	</div>
+	<h1> CODING FROM LIFE (CFL) </h1>
+
+	<img src="assets/imgs/pastel.png" class="image" style="width: 650px; height: 400px; padding-left: 15%; padding-top: 3%; margin-bottom: 5%;">
 
 
-	<img src="assets/imgs/pastel.png" style="width: 650px; height: 400px; padding-left: 10%; padding-top: 5%; margin-bottom: 5%;">
+	<pre class="info">Each of us drew still life objects using html and css. </pre>
+	<pre class="info"><a href="index.html" class="click" style="margin-left: 0%;">Click here</a> to see the archive of different persepectives on the same still life objects.  </pre>
+	<br>
+	<br>
+	<br>
 
-
-		<pre> Each of us drew still life objects using html and css. </pre>
-		<pre> See the different persepectives from the same still life objects.  </pre>
 </body>
 </html>
