--- a/5_coding-from-life-archive/index.html
+++ b/5_coding-from-life-archive/index.html
@@ -8,35 +8,37 @@
 <body>
 	<h1> CFL ARCHIVE </h1>
 	
-	<a href="https://garcv701.github.io/coding-from-life/index.html"> VINCENT GARCIA </a>
-	<br>
-	<a href="https://yangmaya.github.io/coding-from-life/index.html"> YANGCHEN GRUBEN </a>
-	<br>
-	<a href="https://esragumrukculer.github.io/coding-from-life/sketch-2/index.html"> ESRA GUMRUKCULER </a>
-	<br>
-	<a href="https://kayaa946.github.io/sketch-2/index.html"> YAREN KAYA </a>
-	<br>
-	<a href="https://kims889.github.io/coding-from-life/sketch-2/index.html"> SOYEON KIM </a>
-	<br>
-	<a href="https://seowxx.github.io/4_coding-from-life/sketch-2/index.html"> SEOWON KIM </a>
-	<br>
-	<a href="https://leej312.github.io/Project_Lab/coding-from-life/sketch-2/index.html"> JAHYUN LEE </a>
-	<br>
-	<a href="https://lie771.github.io/coding-from-life/index.html"> EMILY LI </a>
-	<br>
-	<a href="https://kmpnguyen0.github.io/coding-from-life/sketch-2/index.html"> KHE NGUYEN </a>
-	<br>
-	<a href="https://privv824.github.io/coding-from-life/sketch-2/index.html"> VINCENT PRIVITERA </a>
-	<br>
-	<a href="https://walde906.github.io/coding-from-life/sketch-2/index.html"> EMIL WALDRON </a>
-	<br>
-	<a href="https://funge549.github.io/coding-from-life/index.html"> EVELIN ZHONG </a>
+	<div class="links">
+		<a href="https://garcv701.github.io/coding-from-life/index.html" style="color: white">VINCENT GARCIA</a>
+		<br>
+		<a href="https://yangmaya.github.io/coding-from-life/index.html" style="color: white">YANGCHEN GRUBEN</a>
+		<br>
+		<a href="https://esragumrukculer.github.io/coding-from-life/sketch-2/index.html" style="color: white">ESRA GUMRUKCULER</a>
+		<br>
+		<a href="https://kayaa946.github.io/sketch-2/index.html" style="color: white"> YAREN KAYA</a>
+		<br>
+		<a href="https://kims889.github.io/coding-from-life/sketch-2/index.html" style="color: white"> SOYEON KIM</a>
+		<br>
+		<a href="https://seowxx.github.io/4_coding-from-life/sketch-2/index.html" style="color: white"> SEOWON KIM</a>
+		<br>
+		<a href="https://leej312.github.io/Project_Lab/coding-from-life/sketch-2/index.html" style="color: white">JAHYUN LEE</a>
+		<br>
+		<a href="https://lie771.github.io/coding-from-life/index.html" style="color: white"> EMILY LI</a>
+		<br>
+		<a href="https://kmpnguyen0.github.io/coding-from-life/sketch-2/index.html" style="color: white"> KHE NGUYEN</a>
+		<br>
+		<a href="https://privv824.github.io/coding-from-life/sketch-2/index.html" style="color: white"> VINCENT PRIVITERA</a>
+		<br>
+		<a href="https://walde906.github.io/coding-from-life/sketch-2/index.html" style="color: white"> EMIL WALDRON</a>
+		<br>
+		<a href="https://funge549.github.io/coding-from-life/index.html" style="color: white"> EVELIN ZHONG</a>
+		<br>
 
+	</div>
+	
 	<p> KRISTEN CHIK / SHUTING GUO / PRITHI KHALIQUE's works are currently not available </p>
 
-	<div class="button"> 
-		<a href="about.html" style="text-decoration: none; color: black; font-family: futura; " > ? </a>
-	</div>
+	<div class="button"> <a href="about.html" class="click" style="font-family: futura; color: black; text-decoration: none;"> ? </div>
 
 </body>
 </html>
