--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> 김서원 </title>
+	<title> SEOWON KIM </title>
 	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-	<p class="seowon" style="color: black; "> SEOWON KIM </p>
+	<p class="seowon" style="color: black; font-family: georgia;"> SW </p>
 
 	<div class="project">
-		<a href="1_clickclick/page1.html" style="color: #abd8c5; text-decoration: underline;"> TEMPO</a>
+		<a href="1_clickclick/page1.html" style="color: #353332; text-decoration: none;"> TEMPO</a>
 		<br>
-		<a href="3_personal-journey-archive/index.html" style="color: #fdc26f; text-decoration: underline;" > PEEP @</a>
+		<a href="3_personal-journey-archive/index.html" style="color: #353332; text-decoration: none;" > PEEP @</a>
 		<br>
-		<a href="4_coding-from-life/sketch-2/index.html" style="color: #f7c8c8; text-decoration: underline;"> PASTEL</a>
+		<a href="5_coding-from-life-archive/index.html" style="color: #353332; text-decoration: none;"> C.F.L ARCHIVE</a>
 		<br>
-		<a href="5_coding-from-life-archive/index.html" style="color: grey; text-decoration: underline;"> C.F.L ARCHIVE</a>
-		<br>
-		<a href="6_obsession/index.html" style="color: #827c7c; text-decoration: line-through;"> OBSESSION</a>
+		<a href="6_obsession/index.html" style="color: #353332; text-decoration: line-through;"> OBSESSION</a>
 	</div>
 	<img src="paper.png" alt="paper">
 
