--- a/4_coding-from-life/sketch-2/index.html
+++ b/4_coding-from-life/sketch-2/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title> Pastel - Coding From Life</title>
+    <title> Pastel – Coding From Life</title>
     <link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
 
