--- a/5_coding-from-life-archive/index.html
+++ b/5_coding-from-life-archive/index.html
@@ -19,7 +19,7 @@
 		<br>
 		<a href="https://kims889.github.io/coding-from-life/sketch-2/index.html" style="color: white"> SOYEON KIM</a>
 		<br>
-		<a href="https://seowxx.github.io/4_coding-from-life/sketch-2/index.html" style="color: white"> SEOWON KIM</a>
+		<a href="https://seowxx.github.io/4_coding-from-life/sketch-2/index.html" style="color:#f7c8c8"> SEOWON KIM</a>
 		<br>
 		<a href="https://leej312.github.io/Project_Lab/coding-from-life/sketch-2/index.html" style="color: white">JAHYUN LEE</a>
 		<br>
