--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<br>
 		<a href="3_personal-journey-archive/index.html" style="color: #353332; text-decoration: none;" > PEEP @</a>
 		<br>
+		<a href="4_coding-from-life/index.html" style="color: #353332; text-decoration: none;" > PASTEL </a>
+		<br>
 		<a href="5_coding-from-life-archive/index.html" style="color: #353332; text-decoration: none;"> C.F.L ARCHIVE</a>
 		<br>
 		<a href="6_obsession/index.html" style="color: #353332; text-decoration: line-through;"> OBSESSION</a>
