--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> OBSESSION </title>
+	<title> synonym </title>
 	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<p> NOT YET! </p>
+	<H1> SYNONYM </H1>
+
+	<div class="background"> </div>
+		
+	<div class="blocks">
+		<div class="block1"> </div>
+		<div class="block2"> </div>
+		<div class="block3"> </div>
+		<div class="block4"> </div>
+		<div class="block5"> </div>
+		<div class="block6"> </div>
+		<div class="block7"> </div>
+		<div class="block8"> </div>
+		<div class="block9"> </div>
+		<div class="block10"> </div>
+		<div class="block11"> </div>
+		<div class="block12"> </div>
+		<div class="block13"> </div>
+		<div class="block14"> </div>
+		<div class="block15"> </div>
+		<div class="block16"> </div>
+		<div class="block17"> </div>
+		<div class="block18"> </div>
+		<div class="block19"> </div>
+		<div class="block20"> </div>
+		<div class="block21"> </div>
+		<div class="block22"> </div>
+		<div class="block23"> </div>
+		<div class="block24"> </div>
+		<div class="block25"> </div>
+		<div class="block26"> </div>
+		<div class="block27"> </div>
+		<div class="block28"> </div>
+		<div class="block29"> </div>
+		<div class="block30"> </div>
+		<div class="block31"> </div>
+		<div class="block32"> </div>
+		<div class="block33"> </div>
+		<div class="block34"> </div>
+		<div class="block35"> </div>
+		<div class="block36"> </div>
+	</div>
+
+	<div class="button"> <a href="about.html" class="click" style="font-family: futura; color: white;text-decoration: none;"> ? </div>
 </body>
 </html>
